# agicore

./: .gitignore  ACCELERANDO.md  ANDON_LOOP.md  BUILD_WITH_AI.md  CHANGELOG.md  CHANNEL.md  CODING_STANDARDS.md  COMMUNITY.md  CONTRIBUTING.md  EMBEDDED.md  EVOLVING.md  LICENSE  LOGGING.md  MACROS.md  NULLCLAW.md  PHILOSOPHY.md  README.md  ROADMAP.md  SKILLDOCS.md  START_HERE_WITH_AI.md  TECH_STACK.md  TESTING.md  THE_TRUE_POWER_OF_AI.md  VAULT.md  WEB_TARGET.md  WHITEPAPER.md  building_accelerando.txt  package-lock.json  package.json
.github/: pull_request_template.md
Idea Factory/: AI Librarian _ Institutional Memory Steward — Agicore Architecture Draft.md  Agicore & Distributed Semantic Systems.md  Agicore BabyAI Runtime Architecture.md  Agicore Migration Tool.md  (+22 more)
apps/agicore-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/agicore-studio/src-tauri/capabilities/: default.json
apps/agicore-studio/src-tauri/src/: commands.rs  main.rs
apps/gen-x-simulator/src-tauri/: Cargo.toml  tauri.conf.json
apps/gen-x-simulator/src-tauri/content/c64/lessons/: 01_multiplication.json
apps/gen-x-simulator/src-tauri/migrations/: 001_core.sql
apps/gen-x-simulator/src-tauri/src/: commands.rs  db.rs  main.rs  types.rs
apps/gen-x-simulator/src-tauri/src/basic/: ast.rs  lexer.rs  mod.rs  parser.rs  runtime.rs
apps/novasyn-chat/src-tauri/: Cargo.toml  tauri.conf.json  vault_schema.sql
apps/novasyn-chat/src-tauri/capabilities/: default.json
apps/novasyn-chat/src-tauri/migrations/: 001_initial.sql  002_system_prompt.sql  003_session_folders.sql  004_session_archived.sql  005_validation_errors.sql
apps/novasyn-chat/src-tauri/src/: ai_service.rs  compiler.rs  db.rs  main.rs  router.rs  tests.rs  vault.rs
apps/novasyn-chat/src-tauri/src/commands/: actions.rs  authority.rs  channel.rs  chat_message.rs  chat_message_folder.rs  chat_message_tag.rs  document.rs  exchange.rs  exchange_tag.rs  feed.rs  folder.rs  folder_item.rs  identity.rs  mod.rs  module_engine.rs  orchestration.rs  orchestration_run.rs  reasoner.rs  semantic_memory.rs  session.rs  session_mode.rs  shell.rs  tag.rs  trigger.rs  upload.rs  user.rs  workspace.rs
apps/reality-ai/src-tauri/: Cargo.toml  tauri.conf.json
apps/reality-ai/src-tauri/capabilities/: default.json
apps/reality-ai/src-tauri/migrations/: 001_core.sql
apps/reality-ai/src-tauri/src/: baseline.rs  commands.rs  dispatch.rs  main.rs  revelation.rs  scoring.rs  types.rs
apps/reality-ai/src-tauri/src/personas/: mod.rs  stubs.rs  wargames.rs
mcp/: README.md  (+2 more)
(+1704 files in other folders)
