[package]
name = "gen_x_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.31.0", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
once_cell = "1.20.2"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }
