[package]
name = "novasyn_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.31.0", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["v4", "v5"] }
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.12.28", features = ["json", "stream"] }
tokio = { version = "1.52.3", features = ["full"] }
futures-util = "0.3.32"
dirs = "5.0.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2.10.1"
epub = "2.1.5"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }
